fix letterspacing

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6184,6 +6184,7 @@ footer p {
   }
   #brn-promo h1 {
     margin-top: 48px;
+    letter-spacing: 0px;
   }
 }
 /* ========== XS media ========== */
